# agent-examples

./: sample-environments.yaml
a2a/financial_agent/: .dockerignore  .env.lmstudio  .gitignore  README.md  pyproject.toml
a2a/financial_agent/mlruns/0/: meta.yaml
a2a/financial_agent/mlruns/827332734941871635/: meta.yaml
a2a/financial_agent/src/financial_agent/: __init__.py  agent.py  configuration.py  graph.py  observability.py  prompts.py  test.py
mcp/: README.md
mcp/finance_tool/: .dockerignore  Dockerfile  README.md  __init__.py  finance_tool.py  pyproject.toml
